--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "ella-translator",
   "private": true,
   "version": "1.0.0",
-  "homepage": "https://hermes-j.github.io/ella-translator",
+  "base": "https://hermes-j.github.io/ella-translator",
   "type": "module",
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
